added figure semantic

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <div>
+        <figure>
         BigFootShadow4509's Blog
-        </div><a href="#" class="home-link">Home</a>
+        </figure><a href="#" class="home-link">Home</a>
     </header>
 
     <main>
