--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     </main>
 
-    <div class="footer">
-        <div><copy-right></copy-right> 2025 BigFootShadow4509</div>
-    </div>
+    <footer>
+       <copy-right>2025 BigFootShadow4509</copy-right>>
+    </footer>
 </body>
 </html>
